- Added ability to add Tracer Tips to big cannon projectiles
 - Added config to make all big cannon projectiles have tracers regardless if they have tracers, where applicable
 - Solid Shot and AP Shot now have block entities to allow tracer placement. Blocks missing them may need to be replaced.
- Added screen shake config options
 - Screen shake intensity (client)
 - Screen shake range (server)
 - Screen shake power (server)
 - Screen shake propagation speed (server)
  - The faster it is, the less delay there is for players at a distance
- Added cannon mount angle goggle display config options
 - Added config for angle precision; ranges from 0 to 4 digits
 - Added config for yaw display range; can either be -180 to +180 degrees or 0 to +360 degrees, defaults to the latter
- Added pick block functionality to Cannon Carriage entity (yields its item)
- Added flak and shrapnel burst cloud effects
 - Has appearance and visibility client config options
 - Amount of particles can also be configured in the shrapnel
- Added new burst sounds for flak and shrapnel
- Added config for different types of big cannon projectile smoke trail: Long, Short, and No Trail
- Added smoke trails to autocannon projectiles
 - Has config for type of trail: Long, Short, and No Trail
- Added "ignores_invulnerability" field to projectiles, ignoring projectile invulnerability
 - The old "ignores_entity_armor" field now only affects if entity armor is bypassed, not invulnerability
 - By default, all CBC projectiles ignore invulnerability, but differ in if they bypass armor
Removed:
- Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
- Removed single-projectile shrapnel, grapeshot, and fluid blob entities
Changed:
- Updated Ritchie's Projectile Library dependency to 2.0.0
 - Improved chunkloading performance
 - Replaced PreciseProjectile interface with tag #ritchiesprojectilelib:precise_motion